p2/config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers: 
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
            name: web
            protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers: 
      - name: apache
        image: httpd:alpine
        ports:
          - containerPort: 80
            name: web
            protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers: 
      - name: wordpress
        image: wordpress
        ports:
          - containerPort: 80
            name: web
            protocol: TCP
