p2/config/service.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: app-one
spec:
  selector:
    app: app-one
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service 
metadata: 
  name: app-two
spec:
  selector:
    app: app-two
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service 
metadata: 
  name: app-three
spec:
  selector:
    app: app-three
  ports:
    - port: 80
      targetPort: 80
